--- a/app/src/main/res/layout/row_show_gallery_images.xml
+++ b/app/src/main/res/layout/row_show_gallery_images.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="7dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="7dp">
 
 
     <ImageView
         android:id="@+id/img_album"
         android:layout_width="80dp"
-        android:layout_centerHorizontal="true"
         android:layout_height="80dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <RelativeLayout
         android:id="@+id/selected_overlay"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
-        android:background="#80000000"
         android:layout_marginTop="10dp"
+        android:background="#80000000"
         android:visibility="invisible">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_tick_circle_green"/>
+            android:src="@drawable/ic_tick_circle_green" />
 
     </RelativeLayout>
 
